--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <!--Title-->
     <title>O'Sullivan's Repair Shop - Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -123,6 +124,7 @@
         <p class="w3-center w3-large">The ones who run this company</p>
         <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
             <div class="w3-col l3 m6 w3-margin-bottom">
+                <!--Owner-->
                 <div class="w3-card">
                     <img src="assets/images/ceo.jpg" alt="Jay the CEO/Founder of the company" style="width:100%">
                     <div class="w3-container">
@@ -135,6 +137,7 @@
                     </div>
                 </div>
             </div>
+            <!--Manager-->
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-card">
                     <img src="assets/images/manager.jpg" alt="Jane the manager of the store" style="width:100%">
@@ -149,6 +152,7 @@
                     </div>
                 </div>
             </div>
+            <!--Design Team-->
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-card">
                     <img src="assets/images/design-team.jpg" alt="Image of design team" style="width:100%">
@@ -163,6 +167,7 @@
                     </div>
                 </div>
             </div>
+            <!--Repair Team-->
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-card">
                     <img src="assets/images/hardware-repair.jpg" alt="Image of repair team" style="width:100%">
@@ -303,6 +308,7 @@
                         <span class="w3-opacity">per month</span>
                     </li>
                     <li class="w3-light-grey w3-padding-24">
+                        <!--Link to 404 file-->
                         <a href="404.html" class="w3-button w3-black w3-padding-large">Sign Up</a>
                     </li>
                 </ul>
@@ -335,6 +341,7 @@
             <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +353 8151515</p>
             <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: srs@mail.com</p>
             <br>
+            <!--Form-->
             <form id="contact-form" target="_blank" onsubmit="return validateForm()">
                 <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"
                         aria-label="Name"></p>
@@ -358,6 +365,7 @@
     <footer class="w3-center w3-black w3-padding-64">
         <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
         <div class="w3-xlarge w3-section">
+            <!--Social Media Links-->
             <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook-official w3-hover-opacity"></a>
             <a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram w3-hover-opacity"></a>
             <a href="https://www.snapchat.com/" target="_blank" class="fa fa-snapchat w3-hover-opacity"></a>
