--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     <footer class="w3-center w3-black w3-padding-64">
         <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
         <div class="w3-xlarge w3-section">
-            <!--Social Media Links-->
+            <!--Social Media-->
             <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook-official w3-hover-opacity"></a>
             <a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram w3-hover-opacity"></a>
             <a href="https://www.snapchat.com/" target="_blank" class="fa fa-snapchat w3-hover-opacity"></a>
